tests/snapshots/snapshots__fixture_superstruct_level4.snap
---
source: tests/snapshots.rs
expression: output
---
error.ts
     5→export type Failure = {
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
    36→    let cached: Array<Failure> | undefined
    37→    const { message, explanation, ...rest } = failure
    38→    const { path } = failure
    39→    const msg =
    40→      path.length === 0 ? message : `At path: ${path.join('.')} -- ${message}`
    41→    super(explanation ?? msg)
    42→    if (explanation != null) this.cause = msg
    43→    Object.assign(this, rest)
    44→    this.name = this.constructor.name
    45→    this.failures = () => {
    46→      return (cached ??= [failure, ...failures()])
    47→    }
    48→  }
    49→}
index.ts
struct.ts
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    20→  ) => Iterable<[string | number, unknown, Struct<any> | Struct<never>]>
    21→
    22→  constructor(props: {
    23→    type: string
    24→    schema: S
    25→    coercer?: Coercer
    26→    validator?: Validator
    27→    refiner?: Refiner<T>
    28→    entries?: Struct<T, S>['entries']
    29→  }) {
    30→    const {
    31→      type,
    32→      schema,
    33→      validator,
    34→      refiner,
    35→      coercer = (value: unknown) => value,
    36→      entries = function* () {},
    37→    } = props
    38→
    39→    this.type = type
    40→    this.schema = schema
    41→    this.entries = entries
    42→    this.coercer = coercer
    43→
    44→    if (validator) {
    45→      this.validator = (value, context) => {
    46→        const result = validator(value, context)
    47→        return toFailures(result, context, this, value)
    48→      }
    49→    } else {
    50→      this.validator = () => []
    51→    }
    52→
    53→    if (refiner) {
    54→      this.refiner = (value, context) => {
    55→        const result = refiner(value, context)
    56→        return toFailures(result, context, this, value)
    57→      }
    58→    } else {
    59→      this.refiner = () => []
    60→    }
    61→  }
    62→
    63→  /**
    64→   * Assert that a value passes the struct's validation, throwing if it doesn't.
    65→   */
    66→
    67→  assert(value: unknown, message?: string): asserts value is T {
    68→    return assert(value, this, message)
    69→  }
    70→
    71→  /**
    72→   * Create a value with the struct's coercion logic, then validate it.
    73→   */
    74→
    75→  create(value: unknown, message?: string): T {
    76→    return create(value, this, message)
    77→  }
    78→
    79→  /**
    80→   * Check if a value passes the struct's validation.
    81→   */
    82→
    83→  is(value: unknown): value is T {
    84→    return is(value, this)
    85→  }
    86→
    87→  /**
    88→   * Mask a value, coercing and validating it, but returning only the subset of
    89→   * properties defined by the struct's schema. Masking applies recursively to
    90→   * props of `object` structs only.
    91→   */
    92→
    93→  mask(value: unknown, message?: string): T {
    94→    return mask(value, this, message)
    95→  }
    96→
    97→  /**
    98→   * Validate a value with the struct's validation logic, returning a tuple
    99→   * representing the result.
   100→   *
   101→   * You may optionally pass `true` for the `coerce` argument to coerce
   102→   * the value before attempting to validate it. If you do, the result will
   103→   * contain the coerced result when successful. Also, `mask` will turn on
   104→   * masking of the unknown `object` props recursively if passed.
   105→   */
   106→
   107→  validate(
   108→    value: unknown,
   109→    options: {
   110→      coerce?: boolean
   111→      mask?: boolean
   112→      message?: string
   113→    } = {}
   114→  ): [StructError, undefined] | [undefined, T] {
   115→    return validate(value, this, options)
   116→  }
   117→}
   123→export function assert<T, S>(
   124→  value: unknown,
   125→  struct: Struct<T, S>,
   126→  message?: string
   127→): asserts value is T {
   139→export function create<T, S>(
   140→  value: unknown,
   141→  struct: Struct<T, S>,
   142→  message?: string
   143→): T {
   157→export function mask<T, S>(
   158→  value: unknown,
   159→  struct: Struct<T, S>,
   160→  message?: string
   161→): T {
   175→export function is<T, S>(value: unknown, struct: Struct<T, S>): value is T {
   185→export function validate<T, S>(
   186→  value: unknown,
   187→  struct: Struct<T, S>,
   188→  options: {
   221→export type Context = {
   231→export type Infer<T extends Struct<any, any>> = T['TYPE']
   237→export type Describe<T> = Struct<T, StructSchema<T>>
   243→export type Result =
   253→export type Coercer<T = unknown> = (value: T, context: Context) => unknown
   259→export type Validator = (value: unknown, context: Context) => Result
   266→export type Refiner<T> = (value: T, context: Context) => Result
structs/coercions.ts
    16→export function coerce<T, S, C>(
    17→  struct: Struct<T, S>,
    18→  condition: Struct<C, any>,
    19→  coercer: Coercer<C>
    20→): Struct<T, S> {
    38→export function defaulted<T, S>(
    39→  struct: Struct<T, S>,
    40→  fallback: any,
    41→  options: {
    79→export function trimmed<T, S>(struct: Struct<T, S>): Struct<T, S> {
structs/refinements.ts
     8→export function empty<
     9→  T extends string | any[] | Map<any, any> | Set<any>,
    10→  S extends any,
    11→>(struct: Struct<T, S>): Struct<T, S> {
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    33→export function max<T extends number | Date, S extends any>(
    34→  struct: Struct<T, S>,
    35→  threshold: T,
    36→  options: {
    55→export function min<T extends number | Date, S extends any>(
    56→  struct: Struct<T, S>,
    57→  threshold: T,
    58→  options: {
    77→export function nonempty<
    78→  T extends string | any[] | Map<any, any> | Set<any>,
    79→  S extends any,
    80→>(struct: Struct<T, S>): Struct<T, S> {
    93→export function pattern<T extends string, S extends any>(
    94→  struct: Struct<T, S>,
    95→  regexp: RegExp
    96→): Struct<T, S> {
   109→export function size<
   110→  T extends string | number | Date | any[] | Map<any, any> | Set<any>,
   111→  S extends any,
   112→>(struct: Struct<T, S>, min: number, max: number = min): Struct<T, S> {
   146→export function refine<T, S>(
   147→  struct: Struct<T, S>,
   148→  name: string,
   149→  refiner: Refiner<T>
   150→): Struct<T, S> {
structs/types.ts
    19→export function any(): Struct<any, null> {
    33→export function array<T extends Struct<any>>(Element?: T): any {
    60→export function bigint(): Struct<bigint, null> {
    70→export function boolean(): Struct<boolean, null> {
    83→export function date(): Struct<Date, null> {
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   131→export function func(): Struct<Function, null> {
   144→export function instance<T extends { new (...args: any): any }>(
   145→  Class: T
   146→): Struct<InstanceType<T>, null> {
   159→export function integer(): Struct<number, null> {
   172→export function intersection<A extends AnyStruct, B extends AnyStruct[]>(
   173→  Structs: [A, ...B]
   174→): Struct<Infer<A> & UnionToIntersection<InferStructTuple<B>[number]>, null> {
   204→export function literal<T>(constant: T): any {
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   258→export function never(): Struct<never, null> {
   266→export function nullable<T, S>(struct: Struct<T, S>): Struct<T | null, S> {
   278→export function number(): Struct<number, null> {
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   351→export function optional<T, S>(struct: Struct<T, S>): Struct<T | undefined, S> {
   367→export function record<K extends string, V>(
   368→  Key: Struct<K>,
   369→  Value: Struct<V>
   370→): Struct<Record<K, V>, null> {
   402→export function regexp(): Struct<RegExp, null> {
   415→export function set<T>(Element?: Struct<T>): any {
   442→export function string(): Struct<string, null> {
   456→export function tuple<A extends AnyStruct, B extends AnyStruct[]>(
   457→  Structs: [A, ...B]
   458→): Struct<[Infer<A>, ...InferStructTuple<B>], null> {
   492→export function type<S extends ObjectSchema>(
   493→  schema: S
   494→): Struct<ObjectType<S>, S> {
   522→export function union<A extends AnyStruct, B extends AnyStruct[]>(
   523→  Structs: [A, ...B]
   524→): Struct<Infer<A> | InferStructTuple<B>[number], null> {
   574→export function unknown(): Struct<unknown, null> {
structs/utilities.ts
    60→export function assign(...Structs: Struct<any>[]): any {
    71→export function define<T>(name: string, validator: Validator): Struct<T, null> {
    80→export function deprecated<T>(
    81→  struct: Struct<T>,
    82→  log: (value: unknown, ctx: Context) => void
    83→): Struct<T> {
   106→export function dynamic<T>(
   107→  fn: (value: unknown, ctx: Context) => Struct<T, any>
   108→): Struct<T, null> {
   140→export function lazy<T>(fn: () => Struct<T, any>): Struct<T, null> {
   171→export function omit<S extends ObjectSchema, K extends keyof S>(
   172→  struct: Struct<ObjectType<S>, S>,
   173→  keys: K[]
   174→): Struct<ObjectType<Omit<S, K>>, Omit<S, K>> {
   197→export function partial<S extends ObjectSchema>(
   198→  struct: Struct<ObjectType<S>, S> | S
   199→): Struct<ObjectType<PartialObjectSchema<S>>, PartialObjectSchema<S>> {
   221→export function pick<S extends ObjectSchema, K extends keyof S>(
   222→  struct: Struct<ObjectType<S>, S>,
   223→  keys: K[]
   224→): Struct<ObjectType<Pick<S, K>>, Pick<S, K>> {
   247→export function struct<T>(name: string, validator: Validator): Struct<T, null> {
utils.ts
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
    16→export function isObject(x: unknown): x is object {
    24→export function isNonArrayObject(x: unknown): x is object {
    32→export function isPlainObject(x: unknown): x is { [key: string]: any } {
    45→export function print(value: any): string {
    58→export function shiftIterator<T>(input: Iterator<T>): T | undefined {
    67→export function toFailure<T, S>(
    68→  result: string | boolean | Partial<Failure>,
    69→  context: Context,
    70→  struct: Struct<T, S>,
    71→  value: any
    72→): Failure | undefined {
   202→export type UnionToIntersection<U> = (
   212→export type Assign<T, U> = Simplify<U & Omit<T, keyof U>>
   218→export type EnumSchema<T extends string | number | undefined | null> = {
   227→export type IsMatch<T, G> = T extends G ? (G extends T ? T : never) : never
   233→export type IsExactMatch<T, U> =
   242→export type IsRecord<T> = T extends object
   251→export type IsTuple<T> = T extends [any]
   267→export type IsUnion<T, U extends T = T> = (
   277→export type ObjectSchema = Record<string, Struct<any, any>>
   283→export type ObjectType<S extends ObjectSchema> = Simplify<
   291→export type OmitBy<T, V> = Omit<
   300→export type Optionalize<S extends object> = OmitBy<S, undefined> &
   307→export type PartialObjectSchema<S extends ObjectSchema> = {
   315→export type PickBy<T, V> = Pick<
   324→export type Simplify<T> = T extends any[] | Date
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   334→export type StructSchema<T> = [T] extends [string | undefined | null]
   379→export type TupleSchema<T> = { [K in keyof T]: Struct<T[K]> }
   385→export type AnyStruct = Struct<any, any>
   394→export type InferStructTuple<
   402→type _InferTuple<
